# Gluj-Drive

./: .gitignore  CHANGELOG.md  Directory.Build.props  GlujDrive.slnx  PROJECT_PLAN.md  README.md
.github/workflows/: build.yml
native/GlujDrive.Inference.Native/: CMakeLists.txt  README.md
native/GlujDrive.Inference.Native/include/: glujdrive_inference.h
native/GlujDrive.Inference.Native/src/: glujdrive_inference.cpp
packaging/windows/: GlujDrive.iss  Open-GlujDriveWhenReady.ps1  Start-GlujDrive.cmd
src/GlujDrive.Application/: ApplicationAssembly.cs  GlujDrive.Application.csproj
src/GlujDrive.Application/Semantic/: SemanticContracts.cs  SemanticSearchOptions.cs
src/GlujDrive.Application/Storage/: AddSourceFolderRequest.cs  AssetFile.cs  AssetPreview.cs  AssetPreviewSize.cs  AssetReadResult.cs  AssetStorageOptions.cs  AssetVisualMetadata.cs  IAssetStorage.cs  IAssetVisualService.cs  IFolderPicker.cs  SourceFolder.cs  StoreAssetRequest.cs  SupportedImageTypes.cs  SupportedMediaTypes.cs
src/GlujDrive.Domain/: DomainAssembly.cs
src/GlujDrive.Infrastructure/: GlujDrive.Infrastructure.csproj  InfrastructureAssembly.cs
src/GlujDrive.Infrastructure/Semantic/: ClipTokenizer.cs  HalfVectorCodec.cs  (+6 more)
src/GlujDrive.Server/: GlujDrive.Server.csproj  GlujDrive.Server.http  Program.cs  appsettings.Development.json  appsettings.json
src/GlujDrive.Web/: index.html  package-lock.json  package.json  vite.config.ts
tools/release/: build-windows-release.ps1
tools/semantic/: convert_tinyclip.py  package-ai-release.ps1  validate_tinyclip_conversion.py  verify_parity.py
(+25 files in other folders)
